# full-stack-fastapi-demo

./: .gitignore  LICENSE  README.md
backend/app/: .env  alembic.ini  pyproject.toml  test.db
backend/app/alembic/: env.py
backend/app/alembic/versions/: 68f03f3bc854_first_commit.py
backend/app/app/: initial_data.py  main.py  tmp_main.py  utils.py
backend/app/app/api/: __init__.py  deps.py
backend/app/app/api/api_V1/: __init__.py
backend/app/app/api/api_V1/endpoints/: __init__.py  items.py  login.py  users.py
backend/app/app/core/: __init__.py  config.py  logger.py  security.py
backend/app/app/crud/: __init__.py  base.py  crud_item.py  crud_user.py
backend/app/app/db/: base.py  base_class.py  init_db.py  session.py
backend/app/app/models/: __init__.py  item.py  user.py
backend/app/app/schemas/: __init__.py  item.py  msg.py  token.py  user.py
frontend/: package.json
frontend/src/: App.vue
frontend/src/components/: NotificationsManager.vue  UploadButton.vue
frontend/src/store/admin/: getters.js  index.js
frontend/src/views/: Home.vue
